[package]
build = './common/build/build.rs'
description = 'ADNL library'
edition = '2021'
name = 'adnl'
version = '0.8.22'

[dependencies]
aes-ctr = '0.6.0'
async-trait = '0.1.22'
enum-as-inner = '=0.5.1'
failure = '0.1.6'
futures = '0.3.1'
log = '0.4'
num_cpus = '1.13'
rand = '0.7'
serde_json = '1.0.41'
socket2 = '0.3.19'
stream-cancel = '0.8.0'
tokio-io-timeout = '1.1.1'
chrono = { optional = true, version = '0.4' }
external-ip = { optional = true, version = '4.1.0' }
lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
serde = { features = [ 'derive', 'rc' ], version = '1.0.105' }
tokio = { features = [ 'io-util', 'macros', 'net', 'rt-multi-thread' ], version = '1.5.0' }
tokio-stream = { features = [ 'net' ], version = '0.1.4' }
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = '0.3.25' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.18' }
zstd = { features = [ 'pkg-config' ], version = '0.11' }

[features]
client = [  ]
debug = [  ]
default = [ 'static_workers' ]
dump = [ 'chrono' ]
node = [ 'external-ip' ]
server = [  ]
static_workers = [  ]
telemetry = [  ]

