[package]
build = './common/build/build.rs'
description = 'ADNL stack library'
edition = '2021'
name = 'adnl'
version = '0.11.4'

[dependencies]
aes-ctr = '0.6.0'
anyhow = '1.0'
async-trait = '0.1'
chrono = { optional = true, version = '0.4' }
enum-as-inner = '=0.5.1'
external-ip = { optional = true, version = '5' }
futures = '0.3.1'
hex = '0.4'
log = '0.4'
num-traits = '0.2'
num_cpus = '1.13'
rand = '0.8'
serde = { features = [ 'derive', 'rc' ], version = '1.0.105' }
serde_json = '1.0'
socket2 = '0.3'
stream-cancel = '0.8.0'
tokio = { features = [ 'io-util', 'macros', 'net', 'rt-multi-thread' ], version = '1.5' }
tokio-io-timeout = '1.1.1'
tokio-stream = { features = [ 'net' ], version = '0.1.4' }
zstd = { features = [ 'pkg-config' ], version = '0.11' }
ever_block = { features = [ 'export_key' ], git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.2' }
lockfree = { git = 'https://github.com/everx-labs/lockfree.git' }
raptor-q = { path = 'raptorq', version = '1.2.1' }
ton_api = { git = 'https://github.com/everx-labs/ever-tl.git', package = 'ton_api', tag = '0.4.4' }

[features]
client = [  ]
debug = [  ]
default = [ 'node', 'static_workers' ]
dump = [ 'chrono' ]
node = [ 'external-ip' ]
server = [  ]
static_workers = [  ]
telemetry = [  ]

