[package]
authors = [ 'Christopher Berner <christopherberner@gmail.com>' ]
description = 'RaptorQ (RFC6330)'
edition = '2021'
homepage = 'https://github.com/cberner/raptorq'
license = 'Apache-2.0'
name = 'raptor-q'
readme = 'README.md'
repository = 'https://github.com/cberner/raptorq'
rust-version = '1.60'
version = '1.7.0'

[dependencies]
js-sys = { optional = true, version = '0.3.60' }
pyo3 = { features = [ 'extension-module', 'abi3-py37' ], optional = true, version = '0.16' }
serde = { features = [ 'std', 'derive' ], optional = true, version = '1.0.102' }
wasm-bindgen = { optional = true, version = '0.2' }

[features]
benchmarking = [ 'std' ]
default = [ 'std' ]
dummy_code = [  ]
python = [ 'pyo3', 'std' ]
serde_support = [ 'serde', 'std' ]
std = [  ]
wasm = [ 'wasm-bindgen', 'js-sys', 'std' ]

[[bench]]
harness = false
name = 'codec_benchmark'
required-features = [ 'benchmarking' ]

[[bench]]
harness = false
name = 'matrix_sparsity'
required-features = [ 'benchmarking' ]

[[bench]]
harness = false
name = 'encode_benchmark'

[[bench]]
harness = false
name = 'decode_benchmark'

[[example]]
name = 'main'
required-features = [ 'std' ]

[lib]
crate-type = [ 'lib' ]

